--- a/jiajiao/src/main/resources/templates/dashboard.html
+++ b/jiajiao/src/main/resources/templates/dashboard.html
@@ -12,6 +12,9 @@
     <link th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/dashboard.css">
     <link rel="stylesheet" href="/css/jiajiao.css">
 
