--- a/jiajiao/src/main/resources/templates/admin/teacherInfo.html
+++ b/jiajiao/src/main/resources/templates/admin/teacherInfo.html
@@ -55,6 +55,7 @@
     <div class="row">
         <!--引入侧边栏-->
         <div th:replace="commons/bar::#sidebar(activeUri='teacherInfo')"></div>
+
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
             <div class="page-holder w-100 d-flex flex-wrap">
                 <div class="container-fluid px-xl-5">
@@ -92,10 +93,12 @@
                                                 <td th:text="${teacher.phone}"></td>
                                                 <td th:text="${teacher.price}"></td>
                                                 <td th:text="${teacher.teachYear}" style="width: 100px;"></td>
-                                                <td th:text="${teacher.createTime}"></td>
+                                                <td th:text="${#dates.format(teacher.createTime,'YYYY-MM-DD')}"></td>
                                                 <!--                        <th th:text="${teacher.description}"></th>-->
                                                 <td>
-                                                    <button th:attr="del_uri=@{/deleteTea/}+${teacher.id}" class="btn btn-sm btn-danger deleteBtn" th:text="删除" style="width: 62px;"></button>
+                                                    <button th:attr="del_uri=@{/deleteTea/}+${teacher.id}"
+                                                            class="btn btn-sm btn-danger deleteBtn" th:text="删除"
+                                                            style="width: 62px;"></button>
                                                 </td>
                                             </tr>
                                             </tbody>
@@ -160,7 +163,7 @@
 <script>
     $(".deleteBtn").click(function () {
         //删除当前老师
-        $("#delete").attr("action",$(this).attr("del_uri")).submit();
+        $("#delete").attr("action", $(this).attr("del_uri")).submit();
         return false;
     })
 </script>
