--- a/jiajiao/src/main/resources/templates/main.html
+++ b/jiajiao/src/main/resources/templates/main.html
@@ -86,12 +86,18 @@
     </div>
 </nav>
 
-<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 navbar navbar-default">
+<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 navbar navbar-default nav-height">
     <ul class="nav nav-pills nav-stacked ">
         <li class="nav-item">
             <a href="/" class="button_left" style="margin-top: 40px;">
                 <span class="glyphicon glyphicon-home"></span>
                 <span th:text="首页"></span>
+            </a>
+        </li>
+        <li class="nav-item" th:if="${type=='teacher'}">
+            <a th:href="@{'/'+${type}+'/toPublish'}" class="button_left">
+                <span class="glyphicon glyphicon-share"></span>
+                <span th:text="分享文章"></span>
             </a>
         </li>
         <li class="nav-item">
@@ -140,7 +146,7 @@
         </li>
     </ul>
 </div>
-<div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 navbar navbar-default" style="padding: 0px">
+<div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 navbar navbar-default nav-height" style="padding: 0px">
 <!--    <nav class="navbar navbar-default navbar-static-top">-->
 <!--        <div class="container">-->
 
