--- a/jiajiao/src/main/resources/templates/myOrders.html
+++ b/jiajiao/src/main/resources/templates/myOrders.html
@@ -86,12 +86,18 @@
     </div>
 </nav>
 
-<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 navbar navbar-default">
+<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 navbar navbar-default nav-height">
     <ul class="nav nav-pills nav-stacked">
         <li class="nav-item">
             <a href="/" class="button_left" style="margin-top: 40px;">
                 <span class="glyphicon glyphicon-home"></span>
                 <span th:text="首页"></span>
+            </a>
+        </li>
+        <li class="nav-item" th:if="${type=='teacher'}">
+            <a th:href="@{'/'+${type}+'/toPublish'}" class="button_left">
+                <span class="glyphicon glyphicon-share"></span>
+                <span th:text="分享文章"></span>
             </a>
         </li>
         <li class="nav-item">
@@ -140,7 +146,7 @@
         </li>
     </ul>
 </div>
-<div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 navbar navbar-default" style="padding: 0px">
+<div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 navbar navbar-default nav-height" style="padding-bottom: 670px;">
     <div class="page-holder w-100 d-flex flex-wrap">
         <div class="container-fluid px-xl-5">
             <section class="py-5">
@@ -148,7 +154,8 @@
                     <div class="col-lg-12 mb-4">
                         <div class="card">
                             <div class="card-header">
-                                <h6 class="text-uppercase mb-0">信息列表</h6>
+                                <h4><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 信息列表</h4>
+                                <hr>
                             </div>
                             <div class="card-body">
                                 <table class="table card-text">
@@ -175,7 +182,11 @@
                                         <td th:text="${order.address}"></td>
                                         <td th:text="${order.price}"></td>
                                         <!--                        <th th:text="${student.description}"></th>-->
-                                        <th th:text="删除" style="width: 62px;"></th>
+<!--                                        <th th:text="删除" style="width: 62px"></th>-->
+                                        <td>
+                                            <button th:if="${type=='student'}" th:attr="del_uri=@{/student/deleteOrder/}+${order.teaName}" class="btn btn-sm btn-danger deleteBtn" th:text="删除" style="width: 62px;"></button>
+<!--                                            <button th:if="${type=='student'}" th:attr="del_uri=@{/deleteOrder/}+${teacher.username}" class="btn btn-sm btn-danger deleteBtn" th:text="删除" style="width: 62px;"></button>-->
+                                        </td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -185,19 +196,17 @@
                 </div>
             </section>
         </div>
-<!--        <footer class="footer bg-white shadow align-self-end py-3 px-xl-5 w-100">-->
-<!--            <div class="container-fluid">-->
-<!--                <div class="row">-->
-<!--                    <div class="col-md-6 text-center text-md-left text-primary">-->
-<!--                        <p class="mb-2 mb-md-0"></p>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-6 text-center text-md-right text-gray-400">-->
-<!--                        <p class="mb-0">Copyright &copy; 2019.sw1612 All rights reserved.</p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </footer>-->
     </div>
+    <form id="delete" method="post">
+        <input type="hidden" name="_method" value="update">
+    </form>
 </div>
 </body>
+<script>
+    $(".deleteBtn").click(function () {
+        //取消订单
+        $("#deleteEmpForm").attr("action",$(this).attr("del_uri")).submit();
+        return false;
+    })
+</script>
 </html>
