--- a/jiajiao/src/main/resources/templates/publicOrder.html
+++ b/jiajiao/src/main/resources/templates/publicOrder.html
@@ -86,12 +86,18 @@
     </div>
 </nav>
 
-<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 navbar navbar-default">
+<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 navbar navbar-default nav-height" >
     <ul class="nav nav-pills nav-stacked">
         <li class="nav-item">
             <a href="/" class="button_left" style="margin-top: 40px;">
                 <span class="glyphicon glyphicon-home"></span>
                 <span th:text="首页"></span>
+            </a>
+        </li>
+        <li class="nav-item" th:if="${type=='teacher'}">
+            <a th:href="@{'/'+${type}+'/toPublish'}" class="button_left">
+                <span class="glyphicon glyphicon-share"></span>
+                <span th:text="分享文章"></span>
             </a>
         </li>
         <li class="nav-item">
@@ -140,7 +146,7 @@
         </li>
     </ul>
 </div>
-<div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 navbar navbar-default" style="padding: 0px">
+<div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 navbar navbar-default nav-height" style="padding-bottom: 85px;">
     <!--    <nav class="navbar navbar-default navbar-static-top">-->
     <!--        <div class="container">-->
 
@@ -153,7 +159,8 @@
                     <div class="col-lg-12 mb-5">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="h6 text-uppercase mb-0">发布家教信息</h3>
+                                <h4><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> 发布家教信息</h4>
+                                <hr>
                             </div>
                             <div class="card-body">
                                 <form action="/student/pubInfo" method="post">
@@ -203,7 +210,7 @@
                                         <input type="text" placeholder="请输入学生特点" required name="charac" class="form-control" th:value="${student != null}?${student.charac}"/>
                                     </div>
                                     <div class="form-group">
-                                        <button type="submit" class="btn btn-primary">提交修改</button>
+                                        <button type="submit" class="btn btn-primary pull-right">提交修改</button>
                                     </div>
                                 </form>
                             </div>
