--- a/jiajiao/src/main/resources/templates/studentUpload.html
+++ b/jiajiao/src/main/resources/templates/studentUpload.html
@@ -86,12 +86,18 @@
     </div>
 </nav>
 
-<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 navbar navbar-default">
+<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 navbar navbar-default nav-height">
     <ul class="nav nav-pills nav-stacked">
         <li class="nav-item">
             <a href="/" class="button_left" style="margin-top: 40px;">
                 <span class="glyphicon glyphicon-home"></span>
                 <span th:text="首页"></span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a th:href="@{'/'+${type}+'/toPublish'}" class="button_left">
+                <span class="glyphicon glyphicon-share"></span>
+                <span th:text="分享"></span>
             </a>
         </li>
         <li class="nav-item">
@@ -138,7 +144,7 @@
         </li>
     </ul>
 </div>
-<div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 navbar navbar-default" style="padding: 0px">
+<div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 navbar navbar-default nav-height" style="padding: 0px">
     <!--    <nav class="navbar navbar-default navbar-static-top">-->
     <!--        <div class="container">-->
 
@@ -151,7 +157,8 @@
                     <div class="col-lg-12 mb-5">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="h6 text-uppercase mb-0">发布家教信息</h3>
+                                <h4><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 发布家教信息</h4>
+                                <hr>
                             </div>
                             <div class="card-body">
                                 <form action="/student/studentUpload" method="post">
