--- a/jiajiao/src/main/resources/templates/teaMyDesc.html
+++ b/jiajiao/src/main/resources/templates/teaMyDesc.html
@@ -86,12 +86,18 @@
     </div>
 </nav>
 
-<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 navbar navbar-default">
+<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 navbar navbar-default nav-height">
     <ul class="nav nav-pills nav-stacked">
         <li class="nav-item">
             <a href="/" class="button_left" style="margin-top: 40px;">
                 <span class="glyphicon glyphicon-home"></span>
                 <span th:text="首页"></span>
+            </a>
+        </li>
+        <li class="nav-item" th:if="${type=='teacher'}">
+            <a th:href="@{'/'+${type}+'/toPublish'}" class="button_left">
+                <span class="glyphicon glyphicon-share"></span>
+                <span th:text="分享文章"></span>
             </a>
         </li>
         <li class="nav-item">
@@ -140,7 +146,7 @@
         </li>
     </ul>
 </div>
-<div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 navbar navbar-default" style="padding: 0px">
+<div class="col-lg-10 col-md-12 col-sm-12 col-xs-12 navbar navbar-default nav-height" style="padding-bottom: 229px;">
     <div class="page-holder w-100 d-flex flex-wrap">
         <div class="container-fluid px-xl-5">
             <section class="py-5">
@@ -148,11 +154,12 @@
                     <div class="col-lg-12 mb-5">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="h6 text-uppercase mb-0">修改个人资料</h3>
+                                <h4><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 修改个人资料</h4>
+                                <hr>
                             </div>
                             <div class="card-body">
                                 <!--                                <c:if test="${not empty msg}"><div class="alert-${msg_type} alert">${msg}</div></c:if>-->
-                                <p>请填写详细信息.</p>
+<!--                                <p>请填写详细信息.</p>-->
                                 <form th:action="@{'/'+${type}+'/updateTeacher'}" method="post">
                                     <input type="hidden" required name="id" th:value="${teacher.id}">
                                     <div class="form-group">
@@ -198,7 +205,7 @@
 <!--                                    </div>-->
                                     <!--                                    </c:if>-->
                                     <div class="form-group">
-                                        <button type="submit" class="btn btn-primary">提交修改</button>
+                                        <button type="submit" class="btn btn-primary pull-right">提交修改</button>
                                     </div>
                                 </form>
                             </div>
