--- a/jiajiao/src/main/resources/templates/teacher.html
+++ b/jiajiao/src/main/resources/templates/teacher.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="/css/jiajiao.css">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +9,7 @@
     <script src="/vendor/popper.js/umd/popper.min.js" type="text/javascript"> </script>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/jiajiao.css">
     <script type="text/javascript">
         $(document).ready(function () {
             // $(".dropdown-toggle").dropdown(toggle);
@@ -154,30 +154,29 @@
         </div>
             <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
                 <hr>
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <div class="list-group">
-                        <strong><h4 class="list-group-title">成功案例</h4></strong>
-                        <a type="button" class="list-group-item">张奇： 天津大学张同学教学案例</a>
-                        <a type="button" class="list-group-item">吕老师： 哈尔滨工程大学刘同学教学案例</a>
-                        <a type="button" class="list-group-item">王老师： 35中周同学教学案例</a>
-                        <a type="button" class="list-group-item">李锐： 北大附中叶同学教学案例</a>
-                        <a type="button" class="list-group-item">马教员： 上海杨浦小学梓欣同学教学案例</a>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="list-group">
-                        <strong><h4 class="list-group-title">热门家教信息</h4></strong>
-                        <a type="button" class="list-group-item">首都师范大学家教</a>
-                        <a type="button" class="list-group-item">北京航空航天大学家教</a>
-                        <a type="button" class="list-group-item">北京理工大学家教</a>
-                        <a type="button" class="list-group-item">北京化工大学家教</a>
-                        <a type="button" class="list-group-item">北京工业大学家教</a>
-                    </div>
-                </li>
-            </ul>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <div class="list-group">
+                            <strong><h4 class="list-group-title">成功案例</h4></strong>
+                            <a type="button" class="list-group-item">张奇： 天津大学张同学教学案例</a>
+                            <a type="button" class="list-group-item">吕老师： 哈尔滨工程大学刘同学教学案例</a>
+                            <a type="button" class="list-group-item">王老师： 35中周同学教学案例</a>
+                            <a type="button" class="list-group-item">李锐： 北大附中叶同学教学案例</a>
+                            <a type="button" class="list-group-item">马教员： 上海杨浦小学梓欣同学教学案例</a>
+                        </div>
+                    </li>
 
-        </div>
+                    <li class="list-group-item">
+                        <div class="list-group" >
+                            <strong><h4 class="list-group-title">热门文章</h4></strong>
+                            <div type="button" class="list-group-item" th:each="article : ${articleList}">
+                                <a th:href="@{'/teacher/toDetail/'+${article.creatorId}}"><span class="article" th:text="${article.creator}+'：'" style="display: inline-block;width: 50px"></span></a>
+                                <a th:href="@{'/teacher/article/'+${article.id}}"><span class="article" th:text="${article.title}"></span></a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
 </div>
 </body>
